Fixing the image overlap issue on about us. Updating max-width for benefits card

--- a/src/components/about-us/about-us.scss
+++ b/src/components/about-us/about-us.scss
@@ -12,8 +12,9 @@
       @include font-type($MAIN_FONT, $LARGE);
     }
     &__image {
-      max-height: 50vh;
-      margin: $MIDLARGE 0;
+      max-width: 50vmax;
+      max-height: 50vmax;
+      margin: $MIDLARGE auto;
     }
     &__text {
       @include font-type($MAIN_FONT, $MEDIUM);
