--- a/src/components/benefit-card/benefit-card.scss
+++ b/src/components/benefit-card/benefit-card.scss
@@ -6,6 +6,7 @@
   .benefit-card {
     position: relative;
     width: 100%;
+    max-width: 350px;
     height: 225px;
     margin: $LARGE $MEDIUM $MEDIUM;
     background-color: white;
